# Votersync

./: .env  Dockerfile  ReadME.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: __innit__.py  api_integration.py  config.py  data_cleaning.py  data_ingestion.py  data_matching.py  database.py  main_app.py
test/: test_data_cleaning.py  test_data_ingestion.py  test_data_matching.py
